Fix text wrapping

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@
 .card {
   color: white;
   margin: 80px 20px 20px;
-  word-wrap: normal;
   border-radius: 12px;
   border: none;
 }
@@ -64,8 +63,12 @@
   font-size: 18px;
   text-align: center;
   padding-top: 8px;
+  white-space: nowrap;
 }
 
+#city {
+  white-space: nowrap;
+}
 h1 {
   font-size: 30px;
   margin-bottom: 0;
@@ -192,11 +195,14 @@ a:hover {
     padding-bottom: 4px;
     margin-bottom: 16px;
     margin-top: 0;
-
     border-radius: 0;
   }
   .weather-app {
     max-height: 260px;
+  }
+
+  .main-icon {
+    margin-top: 48px;
   }
 
   .card-body .col-2 {
